--- a/index1.html
+++ b/index1.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
-    <title>Ejercicios</title>
+    <script src="script1.js"></script>
+    <title>Ejercicios JS</title>
 </head>
 <body>
-    Hola!
     
 </body>
 </html>
