--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script1.js"></script>
-    <title>Ejercicios JS</title>
+    <title>Ejercicios Java Script</title>
 </head>
 <body>
     
